fix bugs + add .yml template